--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
-    <link rel="apple-touch-icon" href="/images/icon-192x192.png">
+    <link rel="apple-touch-icon" href="/images/icon-192x192.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#6d28d9"/>
     <link rel="manifest" href="/manifest.json" />
 
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Ashwheel">
@@ -24,9 +25,7 @@
             document.documentElement.classList.remove('dark');
              document.documentElement.setAttribute('data-theme', 'light');
           }
-        } catch (e) {
-          console.error("Failed to set initial theme:", e);
-        }
+        } catch (e) {}
       })();
     </script>
   </head>
