--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <script src="/suppress-ws-error.js"></script>
     <link rel="icon" href="/favicon.ico" />
     <link rel="apple-touch-icon" href="/images/icon-192x192.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
