fix: add robots.txt and fix favicon for antivirus compatibility

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <script src="/suppress-ws-error.js"></script>
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="/images/icon-192x192.svg" />
+    <link rel="alternate icon" href="/images/icon-192x192.svg" />
     <link rel="apple-touch-icon" href="/images/icon-192x192.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#6d28d9"/>
