docs: Add deployment summary and changelog documentation

--- a/index.html
+++ b/index.html
@@ -3,6 +3,20 @@
 
 <head>
   <meta charset="UTF-8" />
+
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-S2J2RJB4S6"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-S2J2RJB4S6', {
+      'send_page_view': true,
+      'anonymize_ip': true,
+      'cookie_flags': 'SameSite=None;Secure'
+    });
+  </script>
+
   <script src="/suppress-ws-error.js"></script>
 
   <!-- Favicons and Icons -->
