fix: PWA install button overlap with footer, improved logo/favicon setup for Google Search

--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
   <script src="/suppress-ws-error.js"></script>
 
   <!-- Favicons and Icons -->
-  <link rel="icon" type="image/png" href="/favicon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png" />
   <link rel="icon" type="image/svg+xml" href="/images/icon-192x192.svg" />
-  <link rel="alternate icon" href="/images/icon-192x192.svg" />
-  <link rel="apple-touch-icon" href="/images/icon-192x192.svg">
+  <link rel="icon" type="image/png" sizes="192x192" href="/images/icon-192x192.svg" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/images/icon-192x192.svg">
+  <link rel="mask-icon" href="/images/icon-512x512.svg" color="#6d28d9">
 
   <!-- Viewport and Mobile Optimization -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -85,7 +86,8 @@
       "@type": "Organization",
       "name": "Ashwheel",
       "url": "https://ashwheel.cloud",
-      "logo": "https://ashwheel.cloud/images/icon-512x512.png",
+      "logo": "https://ashwheel.cloud/images/icon-512x512.svg",
+      "image": "https://ashwheel.cloud/images/icon-512x512.svg",
       "description": "Free online tools platform offering PDF, image, video editing, and productivity tools",
       "contactPoint": {
         "@type": "ContactPoint",
